style.css
* {
  margin: 0;
}

html, body {
  background-color: transparent;
}
body {
  color: #FFF;
  overflow: hidden;
  font-family: proxima-nova, sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 150%;
  opacity: 0;
  transition: background-color 2s, opacity 2s;
}
body.active {
  opacity: 1;
  background-color: #000;
}
body.scrolling {
  background-image: url('videotape.gif');
  background-size: 100vw 100vh;
  background-repeat: none;
}

#close {
  border: none;
  background: transparent;
  color: #FFF;
  font-size: 100%;
  position: absolute;
  z-index: 2;
  top: 6px;
  right: 6px;
  cursor: pointer;
  opacity: .8;
  transition: all 0.15s;
}
#close:hover {
  opacity: 1;
  transform: scale(1.1);
}

#qredits {
 width: 100%;
 text-align: center;
 transform: translateY(100vh);
}
body.active #qredits {
  transform: translateY(-100%);
}
body.scrolling #qredits {
  opacity: .7;
}

#qreditRollQredits {
  margin-top: 6em;
}

h2 {
  margin-top: 1em;
  font-weight: 800;
  font-size: 200%;
}
h2:first-child {
  margin-top: 0;
}

a {
  color: #FFF;
}
a:hover {
  text-decoration: none;
}

#q42-logo {
  margin: 1em 0;
  height: 4.2em;
}

@media only screen and (max-width: 600px) {
  body {
    font-size: 120%;
  }
}

